--- a/src/FluentBlazorApp/App.razor
+++ b/src/FluentBlazorApp/App.razor
@@ -2,8 +2,16 @@
     <ChildContent>
         <Router AppAssembly="@typeof(App).Assembly">
             <Found Context="routeData">
-                <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-                <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+                <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                    <NotAuthorized>
+                        <RedirectToLogin />
+                    </NotAuthorized>
+                    <Authorizing>
+                        <p>Please wait...</p>
+                    </Authorizing>
+                </AuthorizeRouteView>
+                @* <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+                <FocusOnNavigate RouteData="@routeData" Selector="h1" /> *@
             </Found>
             <NotFound>
                 <PageTitle>Not found</PageTitle>
