Blazor Login NOT DONE

--- a/src/FluentBlazorApp/Pages/FetchData.razor
+++ b/src/FluentBlazorApp/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 @page "/fetchdata"
-@attribute [Authorize]
-@* @attribute [Authorize(Roles = "Admin")]
+@* @attribute [Authorize]
+@attribute [Authorize(Roles = "Admin")]
 @attribute [Authorize(Roles = "Admin,Manager")]
 @attribute [Authorize(Policy = "Admin")] *@
 
